fix: color contrast issue with primary button

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,6 +4,6 @@
 
 @layer components {
     .primary-link {
-      @apply text-center hover:bg-green-700 transition-colors active:border-b-2 p-3 bg-green-600 border-b-4 rounded-md border-b-green-700 text-white;
+      @apply text-center hover:bg-green-800 transition-colors active:border-b-2 p-3 bg-green-700 border-b-4 rounded-md border-b-green-800 text-white;
     }
 }
